--- a/config/west.yml
+++ b/config/west.yml
@@ -1,9 +1,7 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      # Mouse-keys fork (beta)
-      url-base: https://github.com/ftc/zmk
-      # url-base: https://github.com/zmkfirmware
+      url-base: https://github.com/zmkfirmware
   projects:
     - name: zmk
       remote: zmkfirmware
