--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,4 +8,4 @@
 # Increasing the transmit power of the keyboard's BLE radio
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_ZMK_KEYBOARD_NAME="corny"
+CONFIG_ZMK_KEYBOARD_NAME="portakeys"
