--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,15 @@
 #
 ---
 include:
+  - board: nice_nano
+    shield: corne_left
+  - board: nice_nano
+    shield: corne_right
+  - board: nice_nano
+    shield: settings_reset
   - board: nice_nano_v2
     shield: corne_left
   - board: nice_nano_v2
     shield: corne_right
+  - board: nice_nano_v2
+    shield: settings_reset
